# catalyst

./: .gitignore  Cargo.toml  Catalyst.toml  LICENSE  README.md  ca_cert.pem  ca_key.pem  gen_cert.sh
.circleci/: config.yml
codegen/: Cargo.toml  README.md
codegen/router-macro/: Cargo.toml
codegen/router-macro/src/: lib.rs
examples/: simple_routes.rs
src/: body.rs  config.rs  endpoint.rs  error.rs  lib.rs  main.rs  request.rs  response.rs  route.rs  router.rs  routing_table.rs  server.rs
