[package]
name = "catalyst"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Nothing to see here yet."

[dependencies]
h2 = "0.1"
tokio = "0.1"
rustls = "0.15.0"
tokio-rustls = "0.9.0"
bytes = "0.4"
http = "0.1"
futures = "0.1"
serde = "1.0.82"
serde_json = "1.0"

[[example]]
name = "simple_routes"
path = "examples/simple_routes.rs"
